# pixel-to-voxel-projection

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  camera_calibration.py  camera_extrinsics.py  main.py  pyproject.toml  settings.py
docs/adr/: 0001-self-calibrate-extrinsics-from-tracked-object.md  0002-web-dashboard-as-interface.md  0003-multi-target-association-and-visibility-aware-carving.md
pixel_to_voxel/: __init__.py  camera_calibration.py  camera_extrinsics.py  dashboard.py  main.py  settings.py  tracker.py
pixel_to_voxel/simulator/: __init__.py  __main__.py  renderer.py  rig.py  stream.py  trajectory.py
pixel_to_voxel/web/: index.html
pixel_to_voxel/web/static/: app.js  style.css
tests/: test_camera_extrinsics.py  test_dashboard.py  test_imports.py  test_multi_target.py  test_pixel_to_voxel.py  test_simulator_geometry.py  test_tracker.py
