[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel_to_voxel"
version = "0.1.0"
description = "A small python project for pixel to voxel projection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy",
]

[project.optional-dependencies]
# Rendering backend for the synthetic simulator (pixel_to_voxel.simulator).
sim = [
    "pyrender",
    "trimesh",
]

[tool.setuptools.packages.find]
include = ["pixel_to_voxel*"]

[tool.setuptools.package-data]
# The web dashboard's page and vendored assets ship inside the package.
pixel_to_voxel = ["web/*", "web/static/*"]
